@@ -13,9 +13,9 @@
     <name>Drombler JStore Client Agent - Startup</name>
     <description />
     <inceptionYear>2018</inceptionYear>
-    <properties>
-        <jersey.version>2.27</jersey.version>
-    </properties>
+    <!--<properties>-->
+    <!--<jersey.version>2.27</jersey.version>-->
+    <!--</properties>-->
 
 
 
@@ -24,6 +24,11 @@
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>drombler-jstore-client-agent-model</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>drombler-jstore-client-agent-download</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
@@ -77,7 +82,7 @@
                 <plugin>
                     <groupId>org.codehaus.mojo</groupId>
                     <artifactId>exec-maven-plugin</artifactId>
-                    <version>1.6.0</version>
+                    <!--<version>1.6.0</version>-->
                     <executions>
                         <execution>
                             <id>default-cli</id>
@@ -85,7 +90,7 @@
                                 <goal>exec</goal>
                             </goals>
                             <configuration>
-                                <commandlineArgs>--add-modules jdk.incubator.httpclient -Duser.language=en
+                                <commandlineArgs>-Duser.language=en
                                     -Duser.country=US
                                     org.drombler.jstore.client.agent.startup/org.drombler.jstore.client.agent.startup.JStoreClientAgent
                                 </commandlineArgs>
